make API more consistent and resource-oriented
