# src/main/java/pl/mm/homebudget/api/operation/OperationController.java
@@ -2,12 +2,16 @@ package pl.mm.homebudget.api.operation;
 
 import pl.mm.homebudget.api.OperationsApi;
 import pl.mm.homebudget.api.dto.OperationResponse;
+import pl.mm.homebudget.api.dto.RechargeCommand;
+import pl.mm.homebudget.api.dto.TransferCommand;
 import pl.mm.homebudget.application.RegisterService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+
+import java.net.URI;
 
 @RestController
 @RequiredArgsConstructor
@@ -23,5 +27,32 @@ public class OperationController implements OperationsApi {
     @Override
     public Mono<OperationResponse> getOperation(Long operationId, ServerWebExchange exchange) {
         return service.getOperation(operationId);
+    }
+
+    @Override
+    public Mono<OperationResponse> createRecharge(
+            Mono<RechargeCommand> rechargeCommand,
+            ServerWebExchange exchange) {
+        return rechargeCommand
+                .flatMap(request -> service.recharge(request.getRegisterId(), request.getAmount()))
+                .doOnNext(response -> setCreatedOperationLocation(exchange, response));
+    }
+
+    @Override
+    public Mono<OperationResponse> createTransfer(
+            Mono<TransferCommand> transferCommand,
+            ServerWebExchange exchange) {
+        return transferCommand
+                .flatMap(request -> service.transfer(
+                        request.getSourceRegisterId(),
+                        request.getTargetRegisterId(),
+                        request.getAmount()))
+                .doOnNext(response -> setCreatedOperationLocation(exchange, response));
+    }
+
+    private static void setCreatedOperationLocation(ServerWebExchange exchange, OperationResponse response) {
+        exchange.getResponse()
+                .getHeaders()
+                .setLocation(URI.create("/operations/" + response.getId()));
     }
 }
